--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
       {{template "document" .}}
     </div>
 
-    <div id="copyright">Design: <a class="regulartext" href="https://www.state-of-the-art.io/" target="_blank">Rabit, State of the Art</a></div>
+    <div id="copyright">Design: <a class="regulartext" href="https://www.state-of-the-art.io/projects/visit3d/" target="_blank">Rabit, State of the Art</a></div>
 
     <script src="js/babylon-v5.38.0/babylon.min.js"></script>
     <script src="js/babylon-v5.38.0/babylon.glTF2FileLoader.min.js"></script>
