--- a/static/css/index.css
+++ b/static/css/index.css
@@ -69,6 +69,41 @@ html, body {
   scrollbar-width: none;  /* Firefox */
 }
 
+/* Form styles */
+input, textarea {
+  font: inherit;
+  border-radius: 0px;  /* Disabling border radius - causes display glitches on firefox */
+  border: none;
+  border-bottom: 2px solid black;
+  background-color: #0000;
+  margin-left: 10px;
+  text-align: center;
+}
+
+button {
+  font: inherit;
+  border-radius: 0px;  /* Disabling border radius - causes display glitches on firefox */
+  border: 4px solid black;
+}
+
+/* Replace the checkbox/option due to bug in firefox with round borders */
+label {
+  cursor: pointer;
+}
+input[type="checkbox"],input[type="radio"] {
+  display: none;
+}
+input[type="checkbox"] + span,input[type="radio"] + span {
+  display: inline-block;
+  vertical-align: middle;
+  width: 60px;
+  height: 60px;
+  background: url(../img/checkbox_false.svg) center/80% no-repeat;
+}
+input[type="checkbox"]:checked + span,input[type="radio"]:checked + span {
+  background: url(../img/checkbox_true.svg) center/80% no-repeat;
+}
+
 
 /* Additional styles */
 
